added missouri s&t and michigan electric contact json info

--- a/Camelot Test.ipynb
+++ b/Camelot Test.ipynb
@@ -182,7 +182,7 @@
    "source": [
     "non_american_teams = ['McGill Univ',\n",
     "    'Univ of Manitoba',\n",
-    "    'Univ of Waterloo'\n",
+    "    'Univ of Waterloo',\n",
     "    'Université Laval',\n",
     "    'Ecole Polytechnique Montreal',\n",
     "    'Univ of Calgary',\n",
@@ -222,7 +222,12 @@
     "    'Universite Du Quebec a Trois-Rivieres',\n",
     "    'IPN - UPIITA',\n",
     "    'Universidad Autonoma Estado Mexico',\n",
-    "    'Warsaw University of Technology']"
+    "    'Warsaw University of Technology',\n",
+    "    'Western University',\n",
+    "    'UniversitÃ© Laval',\n",
+    "    'Université Laval',\n",
+    "    'Univ of Puerto Rico-Mayaquez',\n",
+    "    'Polytechnic Univ of Puerto Rico']"
    ]
   },
   {
