first few universities up to rutgers

--- a/Camelot Test.ipynb
+++ b/Camelot Test.ipynb
@@ -218,6 +218,7 @@
     "    'Universidad Simon Bolivar',\n",
     "    'Lakehead Univ',\n",
     "    'Univ of British Columbia - Okanagan',\n",
+    "    'Univ of British Columbia',\n",
     "    'Universidad Metropolitana',\n",
     "    'Universite Du Quebec a Trois-Rivieres',\n",
     "    'IPN - UPIITA',\n",
