--- a/scores extractor/extract best teams.ipynb
+++ b/scores extractor/extract best teams.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lincoln_ice_pdf_to_table = camelot.read_pdf(\"fsae_ln_c_2019_result.pdf\",pages='1-end')"
+    "lincoln_ice_pdf_to_table = camelot.read_pdf(\"Score PDFs/fsae_ln_c_2019_result.pdf\",pages='1-end')"
    ]
   },
   {
@@ -52,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lincoln_electric_pdf_to_table = camelot.read_pdf(\"fsae_ln_e_2019_result.pdf\",pages='1-end')"
+    "lincoln_electric_pdf_to_table = camelot.read_pdf(\"Score PDFs/fsae_ln_e_2019_result.pdf\",pages='1-end')"
    ]
   },
   {
@@ -61,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "north_electric_pdf_to_table = camelot.read_pdf(\"fsae_on_2019_ev_result.pdf\",pages='1-end')"
+    "north_electric_pdf_to_table = camelot.read_pdf(\"Score PDFs/fsae_on_2019_ev_result.pdf\",pages='1-end')"
    ]
   },
   {
@@ -70,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "north_ice_pdf_to_table = camelot.read_pdf(\"fsae_on_2019_ic_result.pdf\",pages='1-end')"
+    "north_ice_pdf_to_table = camelot.read_pdf(\"Score PDFs/fsae_on_2019_ic_result.pdf\",pages='1-end')"
    ]
   },
   {
@@ -79,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "michigan_ice_pdf_to_table = camelot.read_pdf(\"fsae_mi_2019_result.pdf\",pages='1-end')"
+    "michigan_ice_pdf_to_table = camelot.read_pdf(\"Score PDFs/fsae_mi_2019_result.pdf\",pages='1-end')"
    ]
   },
   {
@@ -420,7 +420,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "decent_american_teams_best_scores.to_csv('Decent American Teams Best Scores.csv')"
+    "decent_american_teams_best_scores.to_csv('output/Decent American Teams Best Scores.csv')"
    ]
   },
   {
