updated UCSD students entries

--- a/scores extractor/extract best teams.ipynb
+++ b/scores extractor/extract best teams.ipynb
@@ -393,6 +393,7 @@
     "        \n",
     "        column_values = decent_american_teams[columns_to_compare].apply(pd.to_numeric, errors='coerce')\n",
     "        column_values = column_values.fillna(0)\n",
+    "        # TODO: update the following line to use the min for Place_electric and Place_ice\n",
     "        decent_american_teams_best_scores[f\"{score}{car_type}\"] = column_values.max(axis=1, skipna=False)"
    ]
   },
